add loginController loginAspect StillController

--- a/IndependentStudy/src/main/resources/application.properties
+++ b/IndependentStudy/src/main/resources/application.properties
@@ -26,5 +26,6 @@ sms.api.key=2d63f7da2b5f4fa91628c597355a89f9-d44e2832-78f7-4d61-bb97-1330618efaa
 sms.from.number=0983002223
 sms.api.url=https://y3myzd.api.infobip.com/sms/2/text/advanced
 
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
