--- a/IndependentStudy/src/main/resources/application.properties
+++ b/IndependentStudy/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.username=root
-spring.datasource.password=yun1120123
+spring.datasource.password=EEIT87moviedb
 #spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://18.182.6.19:3306/moviedb?serverTimezone=Asia/Taipei&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://52.197.18.192:3306/moviedb?serverTimezone=Asia/Taipei&characterEncoding=utf-8
 #spring.datasource.url=jdbc:mysql://localhost:3306/myjdbc?serverTimezone=Asia/Taipei&characterEncoding=utf-8
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 server.port=8080
